--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     </head>
     <body>
         <header>
-            <div class="mdl-grid">
-                <div class="mdl-cell mdl-cell--8-col-desktop mdl-cell--2-offset-desktop">
+            <div class="nav mdl-grid">
+                <div class="mdl-cell mdl-cell--8-col-desktop mdl-cell--2-offset-desktop mdl-cell--6-col-tablet mdl-cell--1-offset-tablet">
                     <a class="name-logo font-bold font-italics" href="#">Maily Butel</a>
                 </div>
             </div>
         </header>
         <main>
             <div class="mdl-grid">
-                <div class="mdl-cell mdl-cell--8-col-desktop mdl-cell--2-offset-desktop">
+                <div class="mdl-cell mdl-cell--8-col-desktop mdl-cell--2-offset-desktop mdl-cell--6-col-tablet mdl-cell--1-offset-tablet">
                     <div id="about">
-                        <h1 class="section-title">HI! I'M MAILY</h1>
-                        <div class="mdl-cell mdl-cell--6-col-desktop">
+                        <h1 class="section-title">HI! I'M <span style="color: #008fb3">MAILY</span></h1>
+                        <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--8-col-tablet">
                             <p>I'm a Melbourne based software engineering student at Monash University. I love all things programming so I'm trying to learn new technologies.</p>
                             <p>Check out my progress below!</p>
                         </div>
@@ -39,7 +39,7 @@
                     <div id="projects">
                         <h1 class="section-title">PROJECTS</h1>
                         <div class="prject-grid">
-                            <a class="project" href="https://mailybutel.github.io/Getaway-Bloom/">
+                            <a class="project draw-center" href="https://mailybutel.github.io/Getaway-Bloom/">
                                 <h2 class="project-title font-bold">Getaway Bloom</h2>
                                 <p>(Uni project)</p>
                                 <p class="project-description">A holiday planner web app made using vanilla JS and mapbox API.</p>
@@ -50,7 +50,7 @@
                                     <p class="project-tag api">APIs</p>
                                 </div>
                             </a>
-                            <a class="project" href="https://mailybutel.github.io/butel/">
+                            <a class="project draw-center" href="https://mailybutel.github.io/butel/">
                                     <h2 class="project-title font-bold">BUTEL</h2>
                                     <p>(Personal project in progress)</p>
                                     <p class="project-description">A fashion e-commerce site using React and Node js.</p>
